--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h3 id="author"></h3>
     </div>
     <button class="btn" id="quote-btn">Random quote</button>
-    <button class="btn" id="twitter-btn"><i class="	fa fa-twitter"></i>Tweet</button>
+    <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
     <script src='js/script.js'></script>
 </body>
 </html>
