--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' href='css/style.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -17,7 +18,7 @@
         <h3 id="author"></h3>
     </div>
     <button class="btn" id="quote-btn">Random quote</button>
-    <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
+    <a href="#" target="_blank" class="tweet btn"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
     <script src='js/script.js'></script>
 </body>
 </html>
