--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header class="header">
         <h1>Random quote machine</h1>
     </header>
-    <div class="output">
-        <h2 id="quote"></h2>
-        <h3 id="author"></h3>
-    </div>
+    <blockquote class="output">
+        <p id="quote"></p>
+        <cite id="author"></cite>
+    </blockquote>
     <button class="btn" id="quote-btn">Random quote</button>
     <a href="#" target="_blank" class="tweet btn"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
     <script src='js/script.js'></script>
